--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,5 +1,19 @@
 {% extends 'layout.html.twig' %}
 
+{% block stylesheet %}
+
+<link rel="stylesheet" href="/assets/css/navbar.css" />
+
+{% endblock %}
+
+
+
+
+{% block navbar %}
+
+{% endblock %}
+
+
 {% block content %}
-    <h1>Hello Wilder !</h1>
+
 {% endblock %}
