--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    {% block navbar %}{% endblock %}
     {% block content %}{% endblock %}
     {% block javascript %}{% endblock %}
 </body>
