--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,5 +1,25 @@
 {% extends 'layout.html.twig' %}
-
-{% block content %}
-    <h1>Hello Wilder !</h1>
+{% block stylesheet %}
+    <link rel="stylesheet" href="/assets/css/home.css">
 {% endblock %}
+{% block content %}
+    <h1>Gift me 5 !</h1>
+<body> 
+    <div class="container-Card">
+        <div class= "container-list">
+            <img class = "image-list"src="">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur quo exercitationem odit, cum atque laudantium dolore fugit dolorem dolorum temporibus labore aliquid tenetur eveniet, distinctio, voluptates nostrum cumque nobis libero.</p>
+        </div>
+        <div class= "container-Sign_up">
+            <img src="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium ad inventore libero, similique nesciunt incidunt praesentium exercitationem maxime iure ducimus delectus sequi, magnam tempora voluptatibus repellendus! Inventore aut accusantium quam?</p>
+            <input type="submit" value="Sign up for free !">
+        </div>
+        <div class= "container-Youtube">
+            <img src="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita facere tempore sunt quibusdam? Itaque molestiae sunt minima amet modi laborum, earum facilis quasi, odio pariatur animi similique rem, perspiciatis ea.</p>
+        </div>
+    </div>
+</body>
+{% endblock %}
+
