--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -1,3 +1,61 @@
+.topnav {
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .topnav #myLinks {
+    display: none;
+  }
+
+  .topnav a {
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    text-decoration: none;
+    font-size: 45px;
+    display: block;
+  }
+  
+.fa {
+    /* font-size: inherit; */
+    font-size: xxx-large;
+  }
+  
+
+  .topnav a.icon {
+    background: rgb(255, 255, 255);
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  .active {
+    background-color: #04AA6D;
+    color: white;
+  }
 
 
 
+.topnav a img {
+    width: 40px;
+  }
+  
+
+
+
+#logoMenu img {
+    height: 40px;
+  }
+
+.topnav  {
+    background: white;
+
+  }
+
+html {
+    background: rgb(0, 0, 0);
+  }
+  
+#myLinks {
+font-size: small;
+}
