--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -7,34 +7,10 @@
 {% endblock %}
 
 {% block navbar %}
- <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- Top Navigation Menu -->
-<div class="topnav">
-    <a href="" title= "Home"><img src="/assets/images/logo_simple.png" alt="Logo" /></a>
-  <!-- Navigation links (hidden by default) -->
-    <div id="myLinks">
-        <a href="#news">Accueil</a>
-        <a href="#contact">Listes</a>
-        <a href="#about">Log in</a>
-    </div>
-  <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links --> 
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div> 
-<script>
-function myFunction() {
-  var x = document.getElementById("myLinks");
-  if (x.style.display === "block") {
-    x.style.display = "none";
-  } else {
-    x.style.display = "block";
-  }
-}
-</script>
-{% endblock %}
 
+{% include "Components/_navbar.html.twig" %}
+
+{% endblock %}
 
 {% block content %}
 
