--- a/src/View/Components/_navbar.html.twig
+++ b/src/View/Components/_navbar.html.twig
@@ -7,8 +7,8 @@
   <!-- Navigation links (hidden by default) -->
     <div id="myLinks">
         <a href="#news">Accueil</a>
-        <a href="#contact">Listes</a>
-        <a href="#about">Log in</a>
+        <a href="#contact">Listes d'envies</a>
+        <a href="#about">Se connecter</a>
     </div>
   <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links --> 
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
