creation modelle d'affichage listes exemple dans /lists

--- a/src/View/Components/_navbar.html.twig
+++ b/src/View/Components/_navbar.html.twig
@@ -3,11 +3,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Top Navigation Menu -->
 <div class="topnav">
-    <a href="" title= "Home"><img src="/assets/images/logo_simple.png" alt="Logo" /></a>
+    <a title= "Home"><img href = "/" src="/assets/images/logo_simple.png" alt="Logo" /></a>
   <!-- Navigation links (hidden by default) -->
     <div id="myLinks">
-        <a href="#news">Accueil</a>
-        <a href="#contact">Listes</a>
+        <a href="/">Accueil</a>
+        <a href="/list">Listes</a>
         <a href="#about">Log in</a>
     </div>
   <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links --> 
