--- a/public/assets/css/settings.css
+++ b/public/assets/css/settings.css
@@ -25,4 +25,5 @@ body {
     font-size: 16pt;
     font-family: 'Work Sans', sans-serif;
     background-color: var(--color-2);
+    overflow-x: hidden;
 }
