--- a/public/assets/css/list.css
+++ b/public/assets/css/list.css
@@ -74,3 +74,28 @@ div.cards div div a {
     text-decoration: none;
     color: white;
 }
+
+@media screen and (min-width: 600px) {
+    body {
+        height: 100%;
+        width: 100%;
+        background-image: url("/assets/images/background_list.png");
+        background-size: cover;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+        z-index: 0;
+    }
+    .cards {
+        display: flex;
+        justify-content: space-around;
+    }
+    .card {
+        width: 27%;
+    }
+}
