--- a/src/View/Components/_lists.html.twig
+++ b/src/View/Components/_lists.html.twig
@@ -18,7 +18,7 @@
           Titre de la liste
         </p>
         <p class="card-event">
-          Evenement
+          Événement
         </p>
         <p class="card-price">
           Date
@@ -28,32 +28,11 @@
         </p>
       </div>
       <div class="liste cadeaux">
-        <table>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
+        <p>cadeau1</p>
+        <p>cadeau2</p>
+        <p>cadeau3</p>
+        <p>cadeau4</p>
+        <p>cadeau5</p>
         </table>
       </div>
     </div>
@@ -69,7 +48,7 @@
           Titre de la liste
         </p>
         <p class="card-event">
-          Evenement
+          Événement
         </p>
         <p class="card-price">
           Date
@@ -79,33 +58,11 @@
         </p>
       </div>
       <div class="liste cadeaux">
-        <table>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-        </table>
+        <p>cadeau1</p>
+        <p>cadeau2</p>
+        <p>cadeau3</p>
+        <p>cadeau4</p>
+        <p>cadeau5</p>
       </div>
     </div>
     <div class="card-footer">
@@ -120,7 +77,7 @@
           Titre de la liste
         </p>
         <p class="card-event">
-          Evenement
+          Événement
         </p>
         <p class="card-price">
           Date
@@ -130,33 +87,11 @@
         </p>
       </div>
       <div class="liste cadeaux">
-        <table>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-          <tr>
-            <td>
-              cadeau 1
-            </td>
-          </tr>
-        </table>
+        <p>cadeau1</p>
+        <p>cadeau2</p>
+        <p>cadeau3</p>
+        <p>cadeau4</p>
+        <p>cadeau5</p>
       </div>
     </div>
     <div class="card-footer">
