--- a/src/View/Login/index.html.twig
+++ b/src/View/Login/index.html.twig
@@ -25,7 +25,7 @@
             </form>
         </div>
             <div class="noaccount">
-               <a class="noaccount-href" href="/SignIn">Pas de compte?</a>
+               <a class="noaccount-href" href="/signup">Pas de compte?</a>
             </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
