correction suite au merge

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,24 +1,46 @@
-@media (min-width: 580px){
-    .container-card{
-        display: flex;
-        flex-direction: row;
-    }
-}
-.container-card{
+
+.container-card {
     display: flex;
     flex-direction: column;
     margin: 2px;
-    gap: 10%;
+    gap: 20px;
+    background-color: white;
+    border-radius: 11px;
 }
 
-.container-list{
+body {
+    background-color:cadetblue;
+}
+
+h3 {
+    text-align: center;  
+}
+
+.container-list {
    box-shadow: 0 2px 5px;
    margin: 2px;
-}
-.container-sign_up{
-    box-shadow: 0 2px 5px;
-}
-.container-youtube{
-    box-shadow: 0 2px 5px;
+   border-radius: 11px; 
 }
 
+h1 {
+    text-align: center;
+}
+
+.container-sign_up {
+    box-shadow: 0 2px 5px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 11px;
+}
+
+.container-youtube {
+    box-shadow: 0 2px 5px;
+    background-color: white;
+    border-radius: 11px;
+}
+
+.image-card {
+    height: auto;
+    width: 100%;
+    border-radius: 11px;
+}
