--- a/src/View/Login/index.html.twig
+++ b/src/View/Login/index.html.twig
@@ -11,9 +11,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="login-background"></div>
+    <div class="main-background"></div>
         <div class="login-container">
-        <h3 class="login-title">Connexion à Give Me Gift</h3>
+        <h3 class="login-title">Connexion à Give Me Gifts</h3>
         <div class="form-container">
             <form class="form" action="" method="POST">
                 <label for="username"><p class="user">Nom d'utilisateur</p></label>
