--- a/src/View/Signup/index.html.twig
+++ b/src/View/Signup/index.html.twig
@@ -12,11 +12,11 @@
 {% endblock %}
 
 {% block content %}
-    <div class="signup-background"></div>
+    <div class="main-background"></div>
         <div class="signup-container">
-        <h3 class="signup-title">Inscription à Give Me Gift</h3>
+        <h3 class="signup-title">Inscription à Give Me Gifts</h3>
             <div class="account">
-               <a class="account-href" href="/login"> Déjà client?</a>
+               <a class="account-href" href="/login"> Vous avez un compte?</a>
             </div>
         <div class="form-container">
             <form class="form" action="" method="POST">
