--- a/public/assets/css/list_share.css
+++ b/public/assets/css/list_share.css
@@ -1,16 +1,5 @@
-.list-share-background {
-
+.main-background {
     background-image: url("/assets/images/list_share_bg_cut.jpg");
-    background-size: cover;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-    z-index: 0;
 }
 
 /*MOBILE FIRST*/
