--- a/src/View/List/share.html.twig
+++ b/src/View/List/share.html.twig
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-    <div class="list-share-background"></div>
+    <div class="main-background"></div>
     <div class="list-share-container">
         <h3 class="list-title">My birthday list</h3>
         <h4 class="list-event">Birthday</h4>
