--- a/src/View/Components/_lists.html.twig
+++ b/src/View/Components/_lists.html.twig
@@ -1,10 +1,13 @@
+<div class="main-background"></div>
 <h1>
   Listes
 </h1>
 <h2>
   Creez, Modifiez, et Partagez vos listes!
 </h2>
-<button class="sign_up" href="lien">Sign up for free!</button>
+<div class="noaccount">
+               <a class="noaccount-href" href="/signup">Créer un compte</a>
+            </div>
 <h3>
   Voici quelques exemples de listes.
 </h3>
