--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -10,13 +10,13 @@
 {% endblock %}
 
 {% block content %}
-<h1>Give me Gift !</h1>
+<h1>Give me Gifts !</h1>
 <body> 
     <div class="container-card">
-        <div class= "container-card">
+        <div class= "container-list">
             <img class ="image-card" src="/assets/images/pexels-anthony.jpg">
             <h3>How it works !?<h3>
-            <p>Tired of useless gifts ? Your friends are useless when it comes the time to satistify you? Help them to please you with Gift Me 5!</p>
+            <br><p>Tired of useless gifts ? Your friends are useless when it comes the time to satistify you? Help them to please you with Gift Me 5!</p></br>
         </div>
         <div class= "container-sign_up">
             <img class="image-card" src="/assets/images/pexels-karolina2.jpg">
