--- a/src/View/Login/index.html.twig
+++ b/src/View/Login/index.html.twig
@@ -22,11 +22,11 @@
                 <input type="password" id="password" placeholder="Entrer le mot de passe" name="password" required>
                 <label class="show-password" for="checkbox"><input type="checkbox" id="checkbox">Afficher le mot de passe</label>
                 <input type="submit" id='submit' value='Connexion' > 
+                </div>
+                    <div class="noaccount">
+                        <a class="noaccount-href" href="/signup">Créer un compte</a>
+                    </div>
             </form>
-        </div>
-            <div class="noaccount">
-               <a class="noaccount-href" href="/signup">Pas de compte?</a>
-            </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/show_password.js"></script>
