--- a/src/View/Signup/index.html.twig
+++ b/src/View/Signup/index.html.twig
@@ -15,9 +15,6 @@
     <div class="main-background"></div>
         <div class="signup-container">
         <h3 class="signup-title">Inscription à Give Me Gifts</h3>
-            <div class="account">
-               <a class="account-href" href="/login"> Vous avez un compte?</a>
-            </div>
         <div class="form-container">
             <form class="form" action="" method="POST">
                 <div class="name"><label for="firstname"><p class="firstname">Nom</p></label>
@@ -32,7 +29,7 @@
                 <label for="password"><p class="password">Mot de passe</p></label>
                 <input type="password" id="password" placeholder="Entrer le mot de passe" name="password" required>
                 <label class="show-password" for="checkbox"><input type="checkbox" id="checkbox">Afficher le mot de passe</label>
-                <input type="submit" id='submit' value='Connexion' > 
+                <input type="submit" id='submit' value='Créer le compte' > 
             </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
