--- a/public/assets/css/signup.css
+++ b/public/assets/css/signup.css
@@ -23,24 +23,24 @@
 .email {
     color: var(--primary-color);
     text-align: center;
-    margin-right: 5vh;
+    margin-right: 1rem;
 }
 
 .password {
     color: var(--primary-color);
     text-align: center;
-    margin-right: 5vh;
+    margin-right: 1rem;
 }
 
 .birthday {
     color: var(--primary-color);
     text-align: center;
-    margin-right: 5vh;
+    margin-right: 1rem;
 }
 
 .name {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .input-name {
@@ -54,11 +54,11 @@
     flex-flow: row wrap;
     justify-items: center;
     width:100%;
-    margin-left: 2vh;
+    margin-left: 1rem;
 }
 
 input[type=date], input[type=email], input[type=password] {
-    width: 40vh;
+    width: 21rem;
     padding: 12px 20px;
     border: 1px solid #ccc;
     text-align: center;
@@ -67,7 +67,7 @@ input[type=date], input[type=email], input[type=password] {
 }
 
 input[type=text] {
-    width: 35vw;
+    width: 9rem;
     padding: 12px 20px;
     border: 1px solid #ccc;
     text-align: center;
@@ -81,10 +81,10 @@ input[type=submit] {
     padding: 14px 20px;
     border: none;
     cursor: pointer;
-    width: 20vh;
+    width: 10rem;
     border-radius: 11px;
-    margin-top: 1em;
-    margin-left: 25vw;
+    margin-top: 1rem;
+    margin-left: 7rem;
     border: solid black 0.5px;
     box-shadow: 2px 2px 4px black;
 }
@@ -98,20 +98,8 @@ input[type=submit]:hover {
 .show-password {
     color: var(--primary-color);
     font-size: 15px;
-    margin-left: 20vw;
-    margin-top: 10vw;
-}
-
-.account {
-    display: flex;
-    justify-content: left;
-    margin-left: 10vw;
-}
-
-.account-href {
-    color: var(--primary-color);
-    text-decoration: none;
-    font-size: 20px;
+    margin-left: 5rem;
+    margin-top: 8rem;
 }
 
 /*END OF MOBILE FIRST*/
@@ -132,7 +120,7 @@ input[type=submit]:hover {
 
     .lastname {
         color: var(--primary-color);
-        margin-left: 25vh;
+        margin-left: 8em;
     }
 
     .date {
@@ -171,12 +159,12 @@ input[type=submit]:hover {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width:100vh;
+        width: 100%;
         margin: auto;
     }
 
     input[type=date], input[type=email], input[type=password] {
-        width: 60vh;
+        width: 30rem;
         padding: 12px 20px;
         border: 1px solid #ccc;
         text-align: center;
@@ -185,7 +173,7 @@ input[type=submit]:hover {
     }
 
     input[type=text] {
-        width: 30vh;
+        width: 15rem;
         padding: 12px 10px;
         border: 1px solid #ccc;
         text-align: center;
@@ -201,7 +189,7 @@ input[type=submit]:hover {
         margin: 15px 0;
         border: none;
         cursor: pointer;
-        width: 20vh;
+        width: 10rem;
         border-radius: 11px;
         border: solid black 0.5px;
         box-shadow: 2px 2px 4px black ;
@@ -216,17 +204,7 @@ input[type=submit]:hover {
     .show-password {
         color: var(--primary-color);
         font-size: 15px;
-        margin: 1em;
+        margin: 1rem;
         text-shadow: black 2px 2px;
-    }
-
-    .account {
-        text-align: center;
-    }
-
-    .account-href {
-        color: var(--primary-color);
-        text-decoration: none;
-        font-size: 20px;
     }
 }
