--- a/src/View/Login/index.html.twig
+++ b/src/View/Login/index.html.twig
@@ -17,9 +17,9 @@
         <div class="form-container">
             <form class="form" action="" method="POST">
                 <label for="username"><p class="user">Nom d'utilisateur</p></label>
-                <input type="text" id="username" placeholder="Entrer le nom d'utilisateur" name="username" required>
+                <input type="text" id="username" placeholder="Entrer votre adresse mail" name="username" required>
                 <label for="password"><p class="password">Mot de passe</p></label>
-                <input type="password" id="password" placeholder="Entrer le mot de passe" name="password" required>
+                <input type="password" id="password" placeholder="Entrer votre mot de passe" name="password" required>
                 <label class="show-password" for="checkbox"><input type="checkbox" id="checkbox">Afficher le mot de passe</label>
                 <input type="submit" id='submit' value='Connexion' > 
                 </div>
