--- a/public/assets/css/list.css
+++ b/public/assets/css/list.css
@@ -104,20 +104,8 @@ div.cards div div a {
 }
 
 @media screen and (min-width: 600px) {
-    body {
-        height: 100%;
-        width: 100%;
+    .main-background {
         background-image: url("/assets/images/background_list.jpg");
-        background-size: cover;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
-        display: block;
-        z-index: 0;
     }
     .cards {
         flex-direction: row;
