--- a/src/View/Components/_navbar.html.twig
+++ b/src/View/Components/_navbar.html.twig
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Top Navigation Menu -->
 <div class="topnav">
-    <a class = "logoDesktop" href="" title= "Home"><img src="/assets/images/logo.png" alt="Logo" /></a>
+    <a class = "logoDesktop" href="/" title= "Home"><img src="/assets/images/logo.png" alt="Logo" /></a>
   <!-- Navigation links (hidden by default) -->
     <div id="myLinks">
         <a href="/">Accueil</a>
